# jamlang

./: .clangd  .gitignore  CMakeLists.txt  CRUSH.md  LICENSE  Makefile  README.md  build.sh  run_all_tests.sh  run_tests.sh  test_bool_comprehensive.jam  test_comprehensive_if.jam  test_else_debug.jam  test_final_demo.jam  test_if_else_simple.jam  test_main.jam  test_simple_if.jam  test_types.jam
.github/: FUNDING.yml
.github/workflows/: ci.yaml
docs/: REFERENCE.md
src/: main.cpp
tests/: comprehensive_test.jam
tests/cpp/: CMakeLists.txt  all_tests.cpp  build_and_run.sh  external_tests.cpp  test_framework.h  test_if_else.cpp  test_integration.cpp  test_jam_files_ir.cpp  test_lexer.cpp  test_loops.cpp  test_parser.cpp  test_print_functions.cpp  test_runner.cpp  test_types.cpp
tests/fixtures/8-bit-unsigned-integer/: ops.jam  sum.jam
tests/unit/: test_bool.jam  test_bool_mixed.jam  test_if_else.jam  test_if_simple.jam  test_mixed_slices.jam  test_mixed_types.jam  test_slices.jam  test_string.jam  test_u16.jam  test_u32.jam  test_u8.jam
